Incomplete commit to backup some work.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,11 @@ license = "MIT"
 authors = ["Josh Goodman <jogoodma@iu.edu>"]
 readme = "README.md"
 
+packages = [
+    { include = "agr_blastdb_manager"}
+]
+include = ["workflow"]
+
 [tool.poetry.dependencies]
 python = "^3.10"
 snakemake = "^7.3.0"
