--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ include = ["workflow"]
 [tool.poetry.dependencies]
 python = "^3.10"
 snakemake = "^7.3.0"
+pydantic = {extras = ["email"], version = "^1.9.0"}
+orjson = "^3.6.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
