Adjusted project build config.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,15 @@ readme = "README.md"
 packages = [
     { include = "agr_blastdb_manager"}
 ]
-include = ["workflow"]
+include = [
+    "LICENSE",
+    "README.md",
+    "Snakefile",
+    "conf"
+]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.7.10"
 snakemake = "^7.3.0"
 pydantic = {extras = ["email"], version = "^1.9.0"}
 orjson = "^3.6.7"
