--- a/conf/global.yaml
+++ b/conf/global.yaml
@@ -4,7 +4,8 @@ MAKEBLASTDB_BIN: /usr/local/ncbi/blast/bin/makeblastdb
 
 # MOD directory to proccess
 mods:
-  - conf/wormbase/databases.json
+  wormbase: conf/wormbase/databases.json
+  #flybase: conf/flybase/databases.json
 
 # Uncomment to override workflow defaults.
 # FASTA_DIR: data/fasta
