--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ python = "^3.10.0"
 snakemake = "^7.3.0"
 pydantic = {extras = ["email"], version = "^1.9.0"}
 orjson = "^3.6.7"
+biopython = "^1.79"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
