--- a/conf/global.yaml
+++ b/conf/global.yaml
@@ -4,7 +4,7 @@ MAKEBLASTDB_BIN: /usr/local/ncbi/blast/bin/makeblastdb
 
 # MOD directory to proccess
 mods:
-  #wormbase: conf/wormbase/databases.json
+  wormbase: conf/wormbase/databases.json
   flybase: conf/flybase/databases.json
 
 # Uncomment to override workflow defaults.
