Added Xenbase to global conf file.

--- a/conf/global.yaml
+++ b/conf/global.yaml
@@ -7,6 +7,7 @@ mods:
   wormbase: conf/wormbase/databases.json
   flybase: conf/flybase/databases.json
   sgd: conf/sgd/databases.json
+  xenbase: conf/xenbase/databases.json
   #test: conf/wormbase/databases_test.json
 
 # Uncomment to override workflow defaults.
