Add workflow for setting up python/poetry

--- a/.github/workflows/flybase-metadata-update.yml
+++ b/.github/workflows/flybase-metadata-update.yml
@@ -1,7 +1,7 @@
-name: learn-github-actions
-on: [push]
+name: flybase-metadata-update.yml
+on: [workflow_dispatch]
 jobs:
-  check-bats-version:
+  update-flybase:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
