Fix formatting in actions yml.

--- a/.github/workflows/flybase-metadata-update.yml
+++ b/.github/workflows/flybase-metadata-update.yml
@@ -1,5 +1,8 @@
 name: flybase-metadata-update
-on: workflow_dispatch
+on:
+  push:
+    branches: ["flybase-gh-actions"]
+  workflow_dispatch:
 jobs:
   update-flybase:
     runs-on: ubuntu-latest
