--- a/.github/workflows/flybase-metadata-update.yml
+++ b/.github/workflows/flybase-metadata-update.yml
@@ -1,5 +1,6 @@
 name: flybase-metadata-update
-on: workflow_dispatch
+on:
+  workflow_dispatch:
 jobs:
   update-flybase:
     runs-on: ubuntu-latest
