--- a/.github/workflows/flybase-metadata-update.yml
+++ b/.github/workflows/flybase-metadata-update.yml
@@ -12,6 +12,7 @@ jobs:
         run: pipx install poetry
       - uses: actions/setup-python@v4
         with:
+          python-version: '3.10'
           cache: 'poetry'
       - run: poetry install
 
