Properly terminate the poetry run command

--- a/.github/workflows/flybase-metadata-update.yml
+++ b/.github/workflows/flybase-metadata-update.yml
@@ -17,8 +17,8 @@ jobs:
       - run: poetry install
       - name: Update FlyBase metadata file
         run: |
-          poetry shell \
-          rm ./conf/flybase/databases.json \
+          poetry shell && \
+          rm ./conf/flybase/databases.json && \
           make conf/flybase/databases.json
         env:
           FB_EMAIL: ${{ secrets.FB_EMAIL }}
