--- a/.github/workflows/flybase-db-update.yml
+++ b/.github/workflows/flybase-db-update.yml
@@ -1,10 +1,18 @@
 name: flybase-db-update
 on:
   workflow_dispatch:
-env:
-  FB_EMAIL: iudev@morgan.harvard.edu
-  FB_RELEASE: FB2022_04
-  DMEL_RELEASE: 6.47
+    inputs:
+      FB_EMAIL:
+        description: "The FlyBase email to place in the database metadata file."
+        required: true
+        default: "iudev@morgan.harvard.edu"
+      FB_RELEASE:
+        description: "FlyBase release number (e.g. FB2022_04)"
+        required: true
+      DMEL_RELEASE:
+        description: "Dmel annotation release number (e.g. 6.47)"
+        required: true
+
 jobs:
   update-flybase:
     runs-on: ubuntu-latest
@@ -22,13 +30,13 @@ jobs:
           rm ./conf/flybase/databases.json && \
           make conf/flybase/databases.json
         env:
-          FB_EMAIL: ${{ env.FB_EMAIL }}
-          FB_RELEASE: ${{ env.FB_RELEASE }}
-          DMEL_RELEASE: ${{ env.DMEL_RELEASE }}
+          FB_EMAIL: ${{ env.INPUT_FB_EMAIL }}
+          FB_RELEASE: ${{ env.INPUT_FB_RELEASE }}
+          DMEL_RELEASE: ${{ env.INPUT_DMEL_RELEASE }}
       - name: Create PR for DB metadata update
         uses: peter-evans/create-pull-request@v4
         with:
-          title: Update FlyBase DB metadata for ${{ env.FB_RELEASE }}
+          title: Update FlyBase DB metadata for ${{ env.INPUT_FB_RELEASE }}
           body: Auto-generated PR for FlyBase DB metadata updates.
           add-paths: conf/flybase/databases.json
           branch: flybase-db-update
