--- a/.github/workflows/flybase-db-update.yml
+++ b/.github/workflows/flybase-db-update.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Create PR for DB metadata update
         uses: peter-evans/create-pull-request@v4
         with:
-          title: Update FlyBase DB metadata for ${{ inputs.INPUT_FB_RELEASE }}
+          title: Update FlyBase DB metadata for ${{ inputs.FB_RELEASE }}
           body: Auto-generated PR for FlyBase DB metadata updates.
           add-paths: conf/flybase/databases.json
           branch: flybase-db-update
