--- a/conf/global.yaml
+++ b/conf/global.yaml
@@ -4,10 +4,10 @@ MAKEBLASTDB_BIN: /usr/local/ncbi/blast/bin/makeblastdb
 
 # MOD directory to proccess
 mods:
-  wormbase: conf/wormbase/databases.json
-  flybase: conf/flybase/databases.json
-  sgd: conf/sgd/databases.json
-  xenbase: conf/xenbase/databases.json
+  wormbase: conf/wormbase/databases.WB.WS285.json
+  flybase: conf/flybase/databases.FB.FB2022_04.json
+  sgd: conf/sgd/databases.SGD.2022-06-22.json
+  xenbase: conf/xenbase/databases.XB.5.5.1.json
   #test: conf/wormbase/databases_test.json
 
 # Uncomment to override workflow defaults.
