--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ snakemake = "^7.3.0"
 pydantic = {extras = ["email"], version = "^1.9.0"}
 orjson = "^3.6.7"
 biopython = "^1.79"
+pandas = "^2.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
