--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 rich = "^13.5.0"
 click = "^8.1.6"
 requests = "^2.31.0"
+tqdm = "^4.65.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
