--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,8 @@
 black==23.7.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
 click==8.1.6
+idna==3.4
 isort==5.12.0
 markdown-it-py==3.0.0
 mdurl==0.1.2
@@ -8,5 +11,8 @@ packaging==23.1
 pathspec==0.11.2
 platformdirs==3.10.0
 Pygments==2.15.1
+PyYAML==6.0.1
 rich==13.5.0
 tomli==2.0.1
+urllib3==2.0.4
+wget==3.2
