--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -2,7 +2,7 @@
 name = "agr-blastdb-manager"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Adam Wright, Paulo Nuin and the Alliance of Genome Resources"]
 readme = "README.md"
 packages = [{include = "agr_blastdb_manager"}]
 
@@ -16,7 +16,6 @@ tqdm = "^4.65.0"
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
 black = "^23.7.0"
-docly = "^0.3.0"
 
 [build-system]
 requires = ["poetry-core"]
