--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -12,6 +12,7 @@ rich = "^13.5.2"
 click = "^8.1.6"
 requests = "^2.31.0"
 tqdm = "^4.65.0"
+boto = "^2.49.0"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
