--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -15,6 +15,7 @@ tqdm = "^4.65.0"
 wget = "^3.2"
 pyyaml = "^6.0.1"
 boto3 = "^1.28.46"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
