--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,18 @@
-appdirs==1.4.4
-attrs==21.4.0
-biopython==1.79
-black==22.3.0
-certifi==2021.10.8
-charset-normalizer==2.0.12
-click==8.1.3
-ConfigArgParse==1.5.3
-connection-pool==0.0.3
-datrie==0.8.2
-decorator==5.1.1
-dnspython==2.2.1
-docutils==0.18.1
-dpath==2.0.6
-email-validator==1.2.1
-fastjsonschema==2.15.3
-flake8==6.0.0
-gitdb==4.0.9
-GitPython==3.1.27
-idna==3.3
+black==23.7.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.6
+idna==3.4
 isort==5.12.0
-Jinja2==3.1.2
-jsonschema==4.5.1
-jupyter-core==4.10.0
-MarkupSafe==2.1.1
-mccabe==0.7.0
-more-itertools==8.13.0
-mypy-extensions==0.4.3
-nbformat==5.4.0
-numpy==1.22.3
-orjson==3.6.8
-packaging==21.3
-pathspec==0.9.0
-plac==1.3.5
-platformdirs==2.5.2
-pluggy==0.13.1
-psutil==5.9.0
-PuLP==2.6.0
-py==1.11.0
-pycodestyle==2.10.0
-pydantic==1.9.0
-pyflakes==3.0.1
-pyparsing==3.0.9
-pyrsistent==0.18.1
-pytest==5.4.3
-PyYAML==6.0
-ratelimiter==1.2.0.post0
-requests==2.27.1
-retry==0.9.2
-smart-open==6.0.0
-smmap==5.0.0
-snakemake==7.7.0
-stopit==1.1.2
-tabulate==0.8.9
+markdown-it-py==3.0.0
+mdurl==0.1.2
+mypy-extensions==1.0.0
+packaging==23.1
+pathspec==0.11.2
+platformdirs==3.10.0
+Pygments==2.15.1
+PyYAML==6.0.1
+rich==13.5.0
 tomli==2.0.1
-toposort==1.7
-traitlets==5.2.0
-typing_extensions==4.2.0
-urllib3==1.26.9
-wcwidth==0.2.5
-wrapt==1.14.1
-yte==1.4.0
+urllib3==2.0.4
+wget==3.2
