--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ tqdm = "^4.65.0"
 wget = "^3.2"
 pyyaml = "^6.0.1"
 boto3 = "^1.28.46"
+biopython = "^1.81"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
