--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ wget = "^3.2"
 pyyaml = "^6.0.1"
 boto3 = "^1.28.46"
 biopython = "^1.81"
+py-fasta-validator = "^0.6"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
