--- a/src/.env.example
+++ b/src/.env.example
@@ -1,4 +1,8 @@
-MODS ="FB,SGD,WB,XB,ZFIN"
+MODS="FB,SGD,WB,XB,ZFIN"
 
-AWS_ACCESS_KEY_ID =
-AWS_SECRET_ACCESS_KEY =
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
+S3=
+
+MAKEBLASTDB_BIN=
