--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ boto3 = "^1.28.46"
 biopython = "^1.81"
 py-fasta-validator = "^0.6"
 python-dotenv = "^1.0.0"
+slack-sdk = "^3.23.0"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
