--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ slack-sdk = "^3.23.0"
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
 black = "^23.7.0"
+mypy = "^1.8.0"
+types-pyyaml = "^6.0.12.12"
+types-boto3 = "^1.0.2"
 
 [build-system]
 requires = ["poetry-core"]
