--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ biopython = "^1.81"
 py-fasta-validator = "^0.6"
 python-dotenv = "^1.0.0"
 slack-sdk = "^3.23.0"
+numpy = "^1.26.4"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
