--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ py-fasta-validator = "^0.6"
 python-dotenv = "^1.0.0"
 slack-sdk = "^3.23.0"
 numpy = "^1.26.4"
+selenium = "^4.20.0"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
