Added UI tests with necessary dependencies
Added a new test module for UI testing, which includes testing the web rendering logic. Also included a config file for these tests and a utility script for parsing HTML. Updated the existing test scripts to incorporate these changes. Necessary dependencies for these tests, such as BeautifulSoup, have been added to the project dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python-dotenv = "^1.0.0"
 slack-sdk = "^3.23.0"
 numpy = "^1.26.4"
 selenium = "^4.20.0"
+beautifulsoup4 = "^4.12.3"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
