Add configuration options for webhook and logging
The .env.example file now includes placeholders for GITHUB_WEBHOOK_SECRET, PORT, repository paths, and logging configurations. This provides a more complete example for setting up webhooks and logging in the application.

--- a/src/.env.example
+++ b/src/.env.example
@@ -8,4 +8,15 @@ EFS=
 
 MAKEBLASTDB_BIN=
 
-SLACK=
+SLACK=""
+
+# Webhook configuration
+GITHUB_WEBHOOK_SECRET=your_webhook_secret_here
+PORT=5000
+
+# Repository and script paths
+REPO_LOCAL_PATH=/path/to/your/local/repo
+SCRIPT_PATH=/path/to/create_blast_db.py
+
+# Logging
+LOG_FILE=logs/webhook.log
