--- a/.github/workflows/update_blast_db.yml
+++ b/.github/workflows/update_blast_db.yml
@@ -1,27 +1,34 @@
 name: Update BLAST DB on EC2
+
 on:
   push:
-    branches: [ main ]  # or whichever branch you want to trigger on
-  workflow_dispatch:  # Allows manual triggering
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   update-blast-db:
     runs-on: [self-hosted, Linux, X64, blast]
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
       with:
-        fetch-depth: 0  # This gets all history for all branches and tags
-    
+        fetch-depth: 0
+
+    - name: Check working directory
+      run: |
+        echo "Current working directory: $(pwd)"
+        ls -la
+
     - name: Set up Python
       run: |
         python3 -m pip install --upgrade pip
         pip3 install poetry
-    
+
     - name: Install Poetry dependencies
       run: |
         poetry config virtualenvs.create false
         poetry install --no-interaction --no-root
-    
+
     - name: Ensure BLAST is installed
       run: |
         if ! command -v blastn &> /dev/null
@@ -32,7 +39,7 @@ jobs:
         else
             echo "BLAST is already installed"
         fi
-    
+
     - name: Run BLAST DB update script
       env:
         GITHUB_WEBHOOK_SECRET: ${{ secrets.GITHUB_WEBHOOK_SECRET }}
@@ -45,7 +52,7 @@ jobs:
           --environment ${{ github.ref == 'refs/heads/main' && 'prod' || 'dev' }} \
           --update-slack \
           --sync-s3
-    
+
     - name: Upload logs
       uses: actions/upload-artifact@v3
       if: always()
