--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ tqdm = "^4.66.3"
 wget = "^3.2"
 pyyaml = "^6.0.1"
 boto3 = "^1.28.46"
-py-fasta-validator = "^0.6"
 python-dotenv = "^1.0.0"
 slack-sdk = "^3.23.0"
 numpy = "^1.26.4"
@@ -29,6 +28,13 @@ mypy = "^1.8.0"
 types-pyyaml = "^6.0.12.12"
 types-boto3 = "^1.0.2"
 ruff = "^0.12.8"
+pytest = "^7.4.0"
+pytest-cov = "^4.1.0"
+pytest-mock = "^3.11.1"
+locust = "^2.15.1"
+responses = "^0.23.3"
+pillow = "^10.0.0"
+psutil = "^5.9.0"
 
 [build-system]
 requires = ["poetry-core"]
