Update test dependencies and enhance UI configuration
- Update poetry.lock and pyproject.toml with new test dependencies
- Enhance UI test configuration with improved setup
- Update UI config generation scripts for better test coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ locust = "^2.15.1"
 responses = "^0.23.3"
 pillow = "^10.0.0"
 psutil = "^5.9.0"
+cloudscraper = "^1.2.71"
 
 [build-system]
 requires = ["poetry-core"]
