--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ slack-sdk = "^3.23.0"
 numpy = "^1.26.4"
 selenium = "^4.20.0"
 beautifulsoup4 = "^4.12.3"
+webdriver-manager = "^4.0.2"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
