Add comprehensive database testing framework and validation system
Major features added:
- Comprehensive database validation system with file integrity, functionality, and search testing
- MOD-specific test sequences for targeted database validation
- Automated validation integration into main database creation workflow
- Rich reporting with HTML dashboards and JSON exports
- Performance optimization with MOD-specific timeouts and parameters
- Universal conserved sequences for broad species coverage testing
- Enhanced logging and error reporting throughout the system
- Migration from Poetry to uv package manager with updated test commands

Technical improvements:
- Fixed database name generation with proper file extension handling
- Enhanced makeblastdb command generation with sanitized titles
- Integrated automatic validation into create_blast_db.py workflow
- Created standalone validation CLI tools for manual testing
- Added comprehensive test fixtures for all MODs (FB, SGD, WB, ZFIN, RGD, XB)
- Updated documentation with new uv-based commands and workflows

Files added/modified:
- src/database_validator.py - Core validation engine
- src/validate_release.py - Standalone validation CLI
- src/validation_reporter.py - Report generation system
- tests/fixtures/ - MOD-specific and universal test sequences
- Enhanced create_blast_db.py with validation integration
- Updated all documentation and test commands for uv

This creates a production-ready database testing framework that automatically validates
all BLAST databases after creation, ensuring quality and functionality across all MODs.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,3 +47,10 @@ packages = ["src"]
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
+    "pytest-mock>=3.14.1",
+]
